# outgain

./: .gitignore  LICENSE  README.md  bot_ai.rb  build_all.sh  build_mruby.sh  build_slug.sh  circle.yml  circle_deploy.sh  default_ai.rb  deploy.rb  outgain.go  test_database_setup.sql
client/: gulpfile.js  package.json  tsconfig.json  typings.json
client/html/: achievements.html  achievements.tmpl  game-view.html  index.html  leaderboard.html  lobbies.html  styleguide.html  summary.html
client/src/: achievements.ts  demo.js  dom.ts  editor.ts  editor.tsx  extra.d.ts  gameUI.ts  gameUI.tsx  github.ts  index.ts  leaderboard.ts  live-leaderboard.ts  live-leaderboard.tsx  lobbies.ts  main.ts  protocol.ts  renderer.ts  sse.d.ts  summary.ts  util.ts
client/style/: _variables.scss  main.scss
config/: README.md
doc/: build.sh  case_study.tex  design_ideas.tex  design_research_insights.tex  law.tex  lawCoursework.tex  law_case_study.tex
docs/arch/: architecture.tex  build.sh  diagram.dot
runner/: Cargo.toml  build.rs
runner/src/: api.rs  main.rs  protocol.rs  runner.rs  sandbox.c
sandbox/: Makefile  sandbox.c
server/: database.go  database.go~  database_test.go  database_test.go~  outgain.go
server/achievements/: achievements.go
server/config/: config.go
server/controller/: achievements.go  ai.go  auth.go  errors.go  game.go  leaderboard.go  lobbies.go  ping.go  sprites.go  updates.go
server/database/: database.go  database_test.go
server/engine/: collision.go  collision_test.go  creature.go  engine.go  (+3 more)
static/: README.md
templates/: base.tmpl
(+26 files in other folders)
